--- a/app/src/styles/Memo.css
+++ b/app/src/styles/Memo.css
@@ -1,7 +1,8 @@
 .memo-wrap {
   flex: 1;
   min-width: 0;
-  height: 238px;
+  margin-top: 18px;
+  height: 200px;
   display: flex;
   flex-direction: column;
   overflow: hidden;
